manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "*.sa.homework"
    http:
      paths:
        - path: (/|$)(.*)
          backend:
            serviceName: api-service
            servicePort: 8000
        - path: /kbtu(/|$)(.*)
          backend:
            serviceName: api-service
            servicePort: 8000
